--- a/midterm/style.css
+++ b/midterm/style.css
@@ -7,6 +7,7 @@ body {
     font-family: sans-serif;
     font-size: 18px;
     font-weight: bold;
+    line-height: 125%;
 }
 
 /*  Div Wrapper  */
@@ -53,13 +54,18 @@ nav ul{
     justify-content: space-around;
     margin: 0 auto;
     padding: 1rem;
-    /* background-color: aqua; */
-    font-size: larger;
+    font-size: 24px;
 }
 
 nav li a{
     text-decoration: none;
     color: black;
+    border-right: 1px solid black;
+    padding: 1rem;
+}
+
+nav li :nth-child(3){
+    border-right: none;
 }
 
 /* Section Contents */
