--- a/midterm/style.css
+++ b/midterm/style.css
@@ -1,13 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
 * {
     margin: 0%;
 }
 
 body {
     background-color: #aad4cf;
-    font-family: sans-serif;
+    font-family: Roboto; 
     font-size: 18px;
-    font-weight: bold;
     line-height: 125%;
+    font-weight: bolder;
 }
 
 /*  Div Wrapper  */
@@ -23,11 +25,14 @@ body {
     position: relative;
     text-align: center;
     color: white;
+    font-size: 30px;
 }
+
+/* W3 Schools text over image */
 
 .headerTitle {
   position: absolute;
-  top: 50%;
+  top: 70%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
@@ -107,6 +112,10 @@ h2 {
 }
 
 /* Send Button */
+
+.sendButton {
+    padding-top: 1rem;
+}
 
 .button {
     background-color:rgba(255, 255, 255, 0.1);
