--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -68,7 +68,7 @@ nav button:hover{
 
 /* Media Queries Desktop Start */
 
-@media screen and (max-width:760px)
+/* @media screen and (max-width:760px)
     {
 
 .navbar{
@@ -103,5 +103,5 @@ nav input{
     width: 100%;
 }
 
-}
+} */
 /* Media Queries Desktop End */
