--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -1,4 +1,5 @@
 /* Open Sans Font: Regular 400, Bold 700 */
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
 
 * {
     padding: 0%;
@@ -9,7 +10,7 @@
 
 /* Navigation Bar Settings */
 
-.navbar {
+/* .navbar {
     padding: 2rem;
 }
 
@@ -40,11 +41,11 @@ nav a{
 nav a:hover{
     background-color: #c78c06;
     color: #222;
-}
+} */
 
 /* Seach Bar */
 
-nav input {
+/* nav input {
     padding: 12px 18px;
     cursor: text;
 }
@@ -62,7 +63,7 @@ nav button{
 nav button:hover{
     background-color: #c78c06;
     color: #222;
-}
+} */
 
 /* Navigation Bar Settings End */
 
