--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -1,47 +1,55 @@
-/* Open Sans Font: Regular 400, Bold 700 */
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
-
 * {
-    padding: 0%;
-    margin: 0%;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: 'Open Sans', sans-serif;
 }
 
 .wrapper {
-    max-width: 1024px;
+    max-width: 1200px;
     margin: auto;
 }
 
-/* Desktop Media Queries */
-
 /* Navigation Bar Settings */
 
-.navbar {
-    padding: 2rem;
-}
-
-.navbar img{
-    padding-right: 2rem;
-}
+/* Revisit list navbar settings needs improvement and polishing */
 
 nav {
     background-color: #222;
-}    
-
-nav div{
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-    align-items: center;
     padding: 1rem;
 }
-/* Nav Animation */
-nav a{
-    text-decoration: none;
-    font-family: Open Sans Regular;
-    color: #c78c06;
-    padding: 1rem 1.5rem;
-    transition: ease-in-out .3s;
+
+nav ul {
+    width: 100%;
 }
+
+li{
+    list-style-type: none;
+    text-align: center;
+    padding: 1rem;
+}
+
+nav a{
+    width: 100%;
+    text-decoration: none;
+    color: #c78c06;
+    padding: 1rem;
+    transition: 0.3s;
+    transition-timing-function: ease;
+}
+
+/* NavLogo Settings */
+
+.navLogo{
+    background-color: #c78c06;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+}
+
+/* Redo nav button animation */
 
 nav a:hover{
     background-color: #c78c06;
@@ -50,9 +58,12 @@ nav a:hover{
 
 /* Seach Bar */
 
+/* try adding flexbox in form to wrap the input and button together */
+
 nav input {
     padding: 12px 18px;
     cursor: text;
+    width: 90%;
 }
 
 nav button{
@@ -63,6 +74,7 @@ nav button{
     padding: 12px;
     transition: ease-in-out .3s;
     cursor: pointer;
+    max-width: 10%;
 }
 
 nav button:hover{
@@ -70,44 +82,18 @@ nav button:hover{
     color: #222;
 }
 
-/* Navigation Bar Settings End */
+/* add active navigation bar and hover bar */
 
-/* Media Queries Desktop Start */
-
-/* @media screen and (max-width:760px)
-    {
-
-.navbar{
-    padding: 3rem;
-    margin: 0;
-}
-
-nav div{
-    display: flex;
-    flex-direction: column;
-    margin: 0%;
-    max-width: 100%;
-}
-
-.navLogo {
-    background-color: #c78c06;
-    width: 100%;
-    padding: 1.5rem;
-}
-
-nav a{
-    text-align: center;
-    width: 100%;
-}
-
-nav form{
-    display: flex;
-    flex-direction: row;
-}
-
-nav input{
-    width: 100%;
-}
-
+/* @media screen and (min-width: 760px){
+    .navPages ul{
+        display: flex;
+        align-items: center;
+        padding: 1rem;
+    }
 } */
-/* Media Queries Desktop End */
+
+
+
+
+
+/* Desktop Comments */
