--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -22,9 +22,9 @@ nav {
     padding: 1rem;
 }
 
-nav ul {
+/* nav ul {
     width: 100%;
-}
+} */
 
 li{
     list-style-type: none;
@@ -33,8 +33,8 @@ li{
 }
 
 nav a{
-    width: 100%;
     text-decoration: none;
+    background-color:rgba(45, 154, 255, 0.744);
     color: #c78c06;
     padding: 1rem;
     transition: 0.3s;
@@ -52,6 +52,7 @@ nav a{
 /* Redo nav button animation */
 
 nav a:hover{
+    width: 100%;
     background-color: #c78c06;
     color: #222;
 }
@@ -60,10 +61,17 @@ nav a:hover{
 
 /* try adding flexbox in form to wrap the input and button together */
 
+form{
+    display: flex;
+    flex-wrap: nowrap;
+}
+
+/* Flex nowrap fixes the search bar and icon from separating to each other therefore input can now have 100% width */
+
 nav input {
     padding: 12px 18px;
     cursor: text;
-    width: 90%;
+    width: 100%;
 }
 
 nav button{
@@ -74,7 +82,6 @@ nav button{
     padding: 12px;
     transition: ease-in-out .3s;
     cursor: pointer;
-    max-width: 10%;
 }
 
 nav button:hover{
