--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -104,7 +104,7 @@ header section{
     align-content: center;
 }
 
-.banner-frame{
+.banner-content{
     display: flex;
     flex-direction: column;
     position: absolute;
@@ -112,7 +112,7 @@ header section{
     padding:1rem
 }
 
-.banner-frame h1,p{
+.banner-content h1,p{
     color: white;
     margin-bottom: 1rem;
 }
