--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -8,6 +8,7 @@
 
 body {
     font-family: 'Open Sans', sans-serif;
+    /* Could not overide font size cause unknown */
 }
 
 iframe{
@@ -23,12 +24,14 @@ h2{
     margin-bottom: 1rem;
 }
 
+/* Could not differentiate H1 and H2 cause unknown */
+
 h1{
     margin-top: 1rem;
     margin-bottom: 1rem;
 }
 
-/* DO NOT TOUCH */
+/* Font size has been set to 1.5em for some reason */
 
 .wrapper {
     max-width: 1200px;
@@ -50,7 +53,6 @@ nav {
     width: 100%;
     padding: 1rem;
     display: flex;
-    /* align-items: center; */
     justify-content: center;
 }
 
@@ -80,14 +82,12 @@ nav a:hover{
 /* Seach Bar */
 
 /* try adding flexbox in form to wrap the input and button together */
-
 .navPages form{
     display: flex;
     flex-wrap: nowrap;
 }
 
 /* Flex nowrap fixes the search bar and icon from separating to each other therefore input can now have 100% width */
-
 nav input {
     padding: 12px 18px;
     cursor: text;
@@ -160,10 +160,6 @@ nav button:hover{
 /* .about-us{
     background-color: #ffe6ac;
     padding: 1rem;
-}
-
-.about-us img{
-    width: 100%;
 }
 
 .about-us p{
