--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -174,6 +174,7 @@ nav button:hover{
 
 /* Our services content settings */
 
+/* Our Vision Section Settings */
 
 /* Team Section Settings */
 
@@ -189,6 +190,7 @@ nav button:hover{
     padding: 1rem;
 }
 
+/* CEO Desccription Settings */
 .ceo h3{
     border-bottom: 3px solid #c78c06;
     margin-bottom: 1rem;
