--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -60,6 +60,7 @@ nav img{
     padding: 1rem;
     display: flex;
     justify-content: center;
+    flex-wrap: nowrap;
 }
 
 nav a{
@@ -167,9 +168,8 @@ nav button:hover{
     width: 100%;
 }
 
-.service p, h2{
-    padding-left: 1rem;
-    padding-right: 1rem;
+.description{
+    padding: 1rem;
 }
 
 .service{
@@ -334,16 +334,26 @@ footer a{
     color: #c78c06;    
 }
 
-/* @media screen and (min-width: 760px){
-    .navPages ul{
-        display: flex;
-        align-items: center;
-        padding: 1rem;
-    }
-} */
-
-
-
-
-
 /* Desktop Comments */
+
+@media screen and (min-width: 760px){
+
+    /* Navigation Bar */
+    .navLogo{
+        /* Background Color "removes" color #c78c06 */
+        background-color: #222;
+        margin-right: 1rem;
+    }
+
+    .navPages{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    /* About Us Settings */
+    
+    /* Services Settings */
+
+}
