--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -235,29 +235,23 @@ nav button:hover{
 
 /* Team Section Settings */
 
-.ceo{
-    background-color: #ffe6ac;
-}
-
-.ceo:nth-child(2){
-    margin-bottom: 1rem;
-}
-
-.ceo img{
+.our-team img{
     width: 100%;
+    /* background-color: #ffe6ac; */
 }
 
 .ceo-content{
+    background-color: #ffe6ac;
     padding: 1rem;
 }
 
 /* CEO Desccription Settings */
-.ceo h3{
+.ceo-content h3{
     border-bottom: 3px solid #c78c06;
     margin-bottom: 1rem;
 }
 
-.ceo p{
+.ceo-content p{
     margin-bottom: 1rem;
 }
 
@@ -352,7 +346,7 @@ footer a{
     .navPages{
         display: flex;
         flex-direction: row;
-        justify-content: center;
+        justify-content: space-between;
         align-items: center;
     }
     
@@ -418,18 +412,33 @@ footer a{
     /* Our Team Settings */
     /* Note to self row is vertical and column is horizontal */
 
-    .our-team .ceo{
+    .our-team .wrapper{
         display: grid;
         grid-template-columns: 1fr 1fr;
+        /* grid-template-rows:1fr 1fr ; */
     }
 
-    .our-team .ceo:nth-child(2){
-        margin-bottom: 0%;
+    /* John Wick */
+    .our-team img:nth-child(2){
+        grid-column-start: 1;
+        grid-row-start: 2;
     }
 
-    /* .our-team .ceo:nth-child(3){
-        
-    } */
+    .our-team .ceo-content:nth-child(3){
+        grid-column-start: 2;
+        grid-row-start: 2;
+    }
+
+    /* Bob the Builder */
+    .our-team img:nth-child(4){
+        grid-column-start: 2;
+        grid-row-start: 3;
+    }
+
+    .our-team .ceo-content:nth-child(5){
+        grid-column-start: 1;
+        grid-row-start: 3;
+    }
 
     /* Contact Settings */
     /* Note to self row is vertical and column is horizontal */
