minor css polish

--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -237,7 +237,7 @@ nav button:hover{
 
 .our-team img{
     width: 100%;
-    /* background-color: #ffe6ac; */
+    height: 100%;
 }
 
 .ceo-content{
