--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -124,6 +124,7 @@ nav button:hover{
     background-image: url(/images/main-banner.jpg);
     background-position: 40% 60%;
     background-size: 100%;
+    background-repeat: no-repeat;
     color: white;
     padding-top: 6rem;
     padding-bottom: 6rem;
@@ -156,6 +157,7 @@ nav button:hover{
 
 .about-us img{
     width: 100%;
+    max-height: 100%;
 }
 
 .about-us p{
