--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -8,7 +8,6 @@
 
 body {
     font-family: 'Open Sans', sans-serif;
-    /* Could not overide font size cause unknown */
 }
 
 iframe{
@@ -22,13 +21,20 @@ i{
 h2{
     margin-top: 1rem;
     margin-bottom: 1rem;
+    font-size: 32px;
 }
 
-/* Could not differentiate H1 and H2 cause unknown */
+h1{
+    font-size: 48px;
+}
 
 h1{
     margin-top: 1rem;
     margin-bottom: 1rem;
+}
+
+a{
+    font-size: large
 }
 
 .wrapper {
@@ -309,6 +315,10 @@ nav button:hover{
     color: #222;
     background-color: #c78c06;
     border: 1px solid #222;
+}
+
+.location h2{
+    font-size: 48px;
 }
 
 /* Contact Section Table Settings */
