--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -215,7 +215,7 @@ nav button:hover{
     /* background-color: #222; */
     padding-bottom: 3rem;
     /* Temporarily fixed the cropped image issue on the original mockup will do the same to banner */
-    background-image: url(/images/vision.jpg);
+    background-image: url(images/vision.jpg);
     background-position: 50% 50%;
     /* Problem Solved for image will be using this on banner too */
     /* Note to self do not use position absolute to put text on top of image */
