--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -125,7 +125,7 @@ nav button:hover{
 .site-banner{
     background-color: #222;
     background-image: url(/images/main-banner.jpg);
-    background-position: 40% 60%;
+    background-position: center;
     background-size: 100%;
     background-repeat: no-repeat;
     color: white;
@@ -215,11 +215,12 @@ nav button:hover{
     /* background-color: #222; */
     padding-bottom: 3rem;
     /* Temporarily fixed the cropped image issue on the original mockup will do the same to banner */
-    background-image: url(images/vision.jpg);
-    background-position: 50% 50%;
+    background-image: url(/images/vision.jpg);
+    background-position: center;
     /* Problem Solved for image will be using this on banner too */
     /* Note to self do not use position absolute to put text on top of image */
     background-size:cover;
+
 }
 
 .our-vision img{
